load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    ":settings.bzl",
    "lint_default_strict",
    "lint_promote_info",
    "version",
)

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "settings_bzl",
    srcs = glob(["*.bzl"]),
    deps = [
        "//helm/private:bzl_lib",
        "@bazel_skylib//rules:common_settings",
    ],
)

lint_default_strict()

lint_promote_info()

version()
