load("@bazel_skylib//rules:write_file.bzl", "write_file")
load(
    "//helm:defs.bzl",
    "chart_content",
    "chart_file",
    "helm_chart",
    "helm_lint_test",
    "helm_template_test",
)

helm_chart(
    name = "chart_json",
    chart_json = chart_content(
        name = "chart-json",
        api_version = "v2",
        app_version = "1.16.0",
        description = "A Helm chart for Kubernetes by Bazel.",
        icon = "https://helm.sh/img/helm.svg",
        type = "application",
        version = "0.1.0",
    ),
    registry_url = "oci://localhost/helm-registry",
    values = "values.yaml",
)

helm_lint_test(
    name = "chart_json_lint_test",
    chart = ":chart_json",
)

helm_template_test(
    name = "chart_json_template_test",
    chart = ":chart_json",
)

write_file(
    name = "version_file",
    out = "version.txt",
    content = [
        "0.1.0",
        "",
    ],
)

write_file(
    name = "app_version_file",
    out = "app_version.txt",
    content = [
        "1.16.0",
        "",
    ],
)

chart_file(
    name = "chart_file_with_files",
    app_version_file = ":app_version_file",
    chart_name = "chart-file-with-files",
    description = "A Helm chart for Kubernetes by Bazel (chart_file with files).",
    icon = "https://helm.sh/img/helm.svg",
    version_file = ":version_file",
)

helm_chart(
    name = "chart_with_files",
    chart = ":chart_file_with_files",
    values = "values.yaml",
)

helm_lint_test(
    name = "chart_with_files_lint_test",
    chart = ":chart_with_files",
)

helm_template_test(
    name = "chart_with_files_template_test",
    chart = ":chart_with_files",
)
