load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("//helm:defs.bzl", "helm_chart", "helm_command", "helm_lint_test", "helm_template", "helm_template_test")

helm_chart(
    name = "simple",
    registry_url = "oci://localhost/helm-registry",
)

helm_lint_test(
    name = "simple_lint_test",
    chart = ":simple",
)

helm_template(
    name = "simple_template",
    out = "simple.yaml",
    chart = ":simple",
)

helm_template_test(
    name = "simple_template_test",
    chart = ":simple",
)

# Builds (but does not run) a helm_command target that wraps `helm diff upgrade`.
# This exercises the helm_command rule's analysis path; the helm-diff plugin
# itself is not bundled with the toolchain in this test.
helm_command(
    name = "simple.diff",
    command = [
        "diff",
        "upgrade",
    ],
    install_name = "simple",
    package = ":simple",
    tags = ["manual"],
)

# Baseline regression test: locks the OCI manifest digest computed from this
# chart to a known-good value.
diff_test(
    name = "simple_oci_digest_test",
    file1 = "simple.oci_digest.golden",
    file2 = ":simple.oci_digest",
)
