load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:push.bzl", "image_push")
load("//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template_test")
load("//tests:test_defs.bzl", "helm_package_regex_test", "label_to_str")

exports_files(["Chart.lock"])

EXCLUDE_WINDOWS = select({
    # TODO: rules_img may have platform-specific behavior
    "@platforms//os:windows": ["@platforms//:incompatible"],
    "//conditions:default": [],
})

helm_chart(
    name = "with_image_deps_img",
    images = [
        ":image_a.push",
        ":image_b.push",
        ":image_c.push",
        ":image_d.push",
        ":image_e.push",
        "@rules_helm_test_img_container_base",
    ],
    substitutions = {
        # This goofy workaround is needed because Bazel 7 has '~' characters in
        # the label string, while newer versions have '+'. Relying on the fact
        # that the substitutions are handled before image stamps, we can do a
        # double replacement, and thus avoid hardcoding either character into
        # the values file ensuring compatibility with both versions
        "base_container_label": label_to_str("@rules_helm_test_img_container_base//:image"),
    },
    target_compatible_with = EXCLUDE_WINDOWS,
)

helm_lint_test(
    name = "with_image_deps_img_lint_test",
    chart = ":with_image_deps_img",
    target_compatible_with = EXCLUDE_WINDOWS,
)

helm_template_test(
    name = "with_image_deps_img_template_test",
    chart = ":with_image_deps_img",
    target_compatible_with = EXCLUDE_WINDOWS,
)

helm_package_regex_test(
    name = "with_image_deps_img_regex_test",
    package = ":with_image_deps_img",
    target_compatible_with = EXCLUDE_WINDOWS,
    values_patterns = [
        r"image_a:\s+url:\s+\"docker.io/rules_helm/test_img/image_a@sha256:[a-z0-9]{64}\"",
        r"image_b:\s+url:\s+\"docker.io/rules_helm/test_img/image_b@sha256:[a-z0-9]{64}\"",
        r"image_c:\s+url:\s+\"docker.io/rules_helm/test_img/image_c:1.2.3\"",
        r"image_d:\s+url:\s+\"docker.io/rules_helm/test_img/image_d:4.5.6\"",
        r"image_e:\s+url:\s+\"docker.io/rules_helm/test_img/image_e:7.8.9\"",
        r"image_pull:\s+url:\s+\"index.docker.io/library/alpine@sha256:[a-z0-9]{64}\"",
        r"image_pull_tag:\s+url:\s+\"index.docker.io/library/alpine:3.23.3\"",
    ],
)

_IMAGES = [
    "image_a",
    "image_b",
    "image_c",
    "image_d",
    "image_e",
]

# Create simple image layers and manifests for each test image
# Note: Building from scratch (no base image) to ensure cross-platform compatibility
# In production, you would use platform-specific base images pulled in MODULE.bazel
[
    image_layer(
        name = "{}_layer".format(name),
        srcs = {},
        target_compatible_with = EXCLUDE_WINDOWS,
    )
    for name in _IMAGES
]

[
    image_manifest(
        name = name,
        base = "@rules_helm_test_img_container_base",
        layers = [":{}_layer".format(name)],
        target_compatible_with = EXCLUDE_WINDOWS,
    )
    for name in _IMAGES
]

# Image A: Simple push with repository and tags
image_push(
    name = "image_a.push",
    image = ":image_a",
    registry = "docker.io",
    repository = "rules_helm/test_img/image_a",
    tags = ["latest"],
    target_compatible_with = EXCLUDE_WINDOWS,
)

# Image B: Push with repository attribute (demonstrating flexibility)
image_push(
    name = "image_b.push",
    image = ":image_b",
    registry = "docker.io",
    repository = "rules_helm/test_img/image_b",
    tags = ["latest"],
    target_compatible_with = EXCLUDE_WINDOWS,
)

# Image C: Push with specific version tag
image_push(
    name = "image_c.push",
    image = ":image_c",
    registry = "docker.io",
    repository = "rules_helm/test_img/image_c",
    tag = "1.2.3",
    target_compatible_with = EXCLUDE_WINDOWS,
)

# Image D: Push with specific version tag (using tag_list)
image_push(
    name = "image_d.push",
    image = ":image_d",
    registry = "docker.io",
    repository = "rules_helm/test_img/image_d",
    tag_list = ["4.5.6"],
    target_compatible_with = EXCLUDE_WINDOWS,
)

# Image E: Push with templated parameters
string_flag(
    name = "registry",
    build_setting_default = "docker.io",
    visibility = [":__pkg__"],
)

string_flag(
    name = "repository",
    build_setting_default = "rules_helm/test_img/image_e",
    visibility = [":__pkg__"],
)

string_flag(
    name = "tag",
    build_setting_default = "7.8.9",
    visibility = [":__pkg__"],
)

image_push(
    name = "image_e.push",
    build_settings = {
        "registry": ":registry",
        "repository": ":repository",
        "tag": ":tag",
    },
    image = ":image_e",
    registry = "{{ .registry }}",
    repository = "{{ .repository }}",
    tag = "{{ .tag }}",
    target_compatible_with = EXCLUDE_WINDOWS,
)
