load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "oci_digest",
    srcs = ["oci_digest.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//helm/private/oci_digest/chartmeta",
        "@com_github_opencontainers_go_digest//:go-digest",
        "@com_github_opencontainers_image_spec//specs-go",
        "@com_github_opencontainers_image_spec//specs-go/v1:specs-go",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
